--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <meta name="og:locale" content="id_ID">
   <meta name="og:type" content="website">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link itemprop="mainEntityOfPage" rel="canonical" href="https://www.farocapospartivento.com/" />
-  <link rel="amphtml" href="https://pub-cf2c86691f594e958cbb1c6676c85318.r2.dev/toto-macau.html" />  	
+  <link itemprop="mainEntityOfPage" rel="canonical" href="https://luxlifemiamiblog.com/" />
+  <link rel="amphtml" href="https://pub-cf2c86691f594e958cbb1c6676c85318.r2.dev/totomacau.html" />  	
   <link rel="alternate" hreflang="id" href="https://www.farocapospartivento.com/" />
   <link rel="icon" href="https://gambarku.site/gambar/logoweb.png" type="image/x-icon" />
   <link rel="preload" as="image" href="https://gambarku.site/img/totomacaus.jpg"/>
