--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:title" content="SANTUY4D - Link Alternatif Situs Game Slot Online Terpercaya" />
     <meta property="og:description"
         content="Santuy4d menyatakan dirinya pantas memegang gelar situs slot terpercaya dengan kehadiran link alternatif untuk mengakses game online secara luas. Alamat website resmi berbentuk sebuah halaman login menaruh link santuy4d pada urutan pertama daftar rekomendasi slot online terbaik." />
+    <meta name="google-site-verification" content="so1Xp8GaW5br3KOHLYT6O34ZgSGv4wIKhbG69d_eVkI" />
     <meta property="og:url" content="https://journall.org/" />
     <meta property="og:site_name" content="SANTUY4D" />
     <meta property="og:author" content="SANTUY4D" />
